crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__doctor_store__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain doctor store
exit: 0
--- stdout ---
Store is healthy. 3 memories indexed, 3 on disk.
--- stderr ---
