crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__doctor_store__pretty.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format pretty doctor store
exit: 0
--- stdout ---
✓ Store is healthy. 3 memories indexed, 3 on disk.
--- stderr ---
